[package]
name = "es-fluent-manager-core"
description = """
es-fluent manager core
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
debug-embed = [ "embedded", "rust-embed/debug-embed" ]
default = [ "embedded" ]
embedded = [ "dep:rust-embed" ]

[dependencies]
es-fluent-shared = { workspace = true }
fluent-bundle = { workspace = true }
fluent-fallback = { workspace = true }
futures = { workspace = true }
icu_locale = { workspace = true }
intl-memoizer = { workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
rust-embed = { optional = true, workspace = true }
rustc-hash = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
rust-embed = { features = [ "debug-embed" ], optional = true, workspace = true }

[dev-dependencies]
serial_test = { workspace = true }

[lints]
workspace = true
