[package]
name = "es-fluent-manager-dioxus"
description = """
Dioxus provider, hook, and SSR runtime manager for es-fluent translations
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.7.0"
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale", "dioxus" ]

[features]
client = [ "dep:dioxus-core", "dep:dioxus-core-macro", "dep:dioxus-hooks", "dep:dioxus-signals" ]
default = [  ]
ssr = [ "dep:dioxus-core", "dep:dioxus-ssr" ]

[dependencies]
dioxus-core = { optional = true, workspace = true }
dioxus-core-macro = { optional = true, workspace = true }
dioxus-hooks = { optional = true, workspace = true }
dioxus-signals = { optional = true, workspace = true }
dioxus-ssr = { optional = true, workspace = true }
es-fluent = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-manager-macros = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
dioxus-core-macro = { workspace = true }
dioxus-html = { workspace = true }
dioxus-signals = { workspace = true }
dioxus-ssr = { workspace = true }
serial_test = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
