[package]
name = "es-fluent-manager-dioxus"
description = """
Dioxus provider, hook, and SSR runtime manager for es-fluent translations
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.7.2"
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale", "dioxus" ]

[features]
client = [ "dep:dioxus-core", "dep:dioxus-core-macro", "dep:dioxus-hooks", "dep:dioxus-signals" ]
default = [  ]
ssr = [ "dep:dioxus-core", "dep:dioxus-ssr", "dep:futures" ]

[dependencies]
dioxus = { features = [ "asset" ], workspace = true }
dioxus-core = { optional = true, workspace = true }
dioxus-core-macro = { optional = true, workspace = true }
dioxus-hooks = { optional = true, workspace = true }
dioxus-signals = { optional = true, workspace = true }
dioxus-ssr = { optional = true, workspace = true }
es-fluent = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-manager-macros = { workspace = true }
fluent-bundle = { workspace = true }
futures = { optional = true, workspace = true }
inventory = { workspace = true }
parking_lot = { workspace = true }
tracing = { workspace = true }
unic-langid = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde_json = { workspace = true }
wasm-bindgen = { workspace = true }
web-sys = { features = [ "Location", "MessageEvent", "WebSocket", "Window" ], workspace = true }

[dev-dependencies]
dioxus-core-macro = { workspace = true }
dioxus-signals = { workspace = true }
dioxus-ssr = { workspace = true }
es-fluent-lang = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
serial_test = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
