[package]
name = "es-fluent-manager-embedded"
description = """
es-fluent manager for rust_embed
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[features]
default = [ "macros" ]
macros = [ "es-fluent-manager-macros" ]

[dependencies]
es-fluent = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-manager-macros = { optional = true, workspace = true }
tracing = { workspace = true }
unic-langid = { workspace = true }

[lints]
workspace = true
