[package]
name = "es-fluent-manager-generic"
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
description = "A generic manager for es-fluent that can be used in various contexts."

[dependencies]
es-fluent-manager-core = { workspace = true }
unic-langid = { workspace = true }

[lints]
workspace = true
