[package]
name = "es-fluent-manager-macros"
description = """
Macros for the es-fluent manager
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
es-fluent-toml = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[lints]
workspace = true
