[package]
name = "es-fluent-manager-macros"
description = """
Macros for the es-fluent manager
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
es-fluent-derive-core = { workspace = true }
es-fluent-shared = { workspace = true }
es-fluent-toml = { workspace = true }
heck = { workspace = true }
path-slash = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full" ], workspace = true }

[dev-dependencies]
es-fluent-build = { workspace = true }
insta = { workspace = true }
prettyplease = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
trybuild = { workspace = true }

[lints]
workspace = true
