[package]
name = "es-fluent-manager"
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
i18n-embed.workspace = true
inventory.workspace = true

[lints]
workspace = true
