[package]
name = "es-fluent-manager"
edition.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
es-fluent-manager-macros = { optional = true, workspace = true }
i18n-embed.workspace = true
inventory.workspace = true
log.workspace = true
thiserror.workspace = true

[features]
default = [  ]
macros = [ "dep:es-fluent-manager-macros" ]

[lints]
workspace = true
