[package]
name = "es-fluent-sc-parser"
description = """
A crate for parsing Fluent syntax from source code
"""
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
bon = { workspace = true }
darling = { workspace = true }
es-fluent-core = { workspace = true }
getset = { workspace = true }
log = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "visit", "parsing" ], workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }

[lints]
workspace = true
