[package]
name = "es-fluent-shared"
description = "Shared runtime-safe types and helpers for the es-fluent ecosystem"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
anyhow = { workspace = true }
darling = { workspace = true }
derive_more = { features = [ "full" ], workspace = true }
fluent-syntax = { workspace = true }
heck = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }
syn = { features = [ "full" ], workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
