[package]
name = "es-fluent-toml"
description = """
Toml crate for es-fluent
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
serde = { features = [ "derive" ], workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unic-langid = { workspace = true }

[features]
fs-ops = [  ]

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
