[package]
name = "es-fluent-toml"
description = """
Toml crate for es-fluent
"""
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true
readme = "README.md"

[dependencies]
es-fluent-shared = { workspace = true }
fs-err = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
rstest = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
