[package]
name = "es-fluent"
description = """
The es-fluent crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale" ]

[features]
default = [  ]
derive = [ "dep:es-fluent-derive" ]
build = [ "dep:es-fluent-toml" ]

[dependencies]
arc-swap = { workspace = true }
bon = { workspace = true }
es-fluent-derive = { optional = true, workspace = true }
es-fluent-derive-core = { workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-toml = { optional = true, workspace = true }
fluent-bundle = { workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
serde = { features = [ "derive" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[dev-dependencies]
chrono = { workspace = true }
es-fluent-generate = { workspace = true }
rust_decimal = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
