[package]
name = "es-fluent"
description = """
Type-safe Fluent localization derives and runtime traits for Rust applications
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale" ]

[features]
build = [ "dep:es-fluent-toml" ]
default = [ "derive" ]
derive = [ "dep:es-fluent-derive" ]

[dependencies]
es-fluent-derive = { optional = true, workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-shared = { workspace = true }
es-fluent-toml = { optional = true, workspace = true }
fluent-bundle = { workspace = true }
inventory = { workspace = true }
rust-embed = { workspace = true }
tracing = { workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }

[dev-dependencies]
es-fluent-generate = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
