[package]
name = "es-fluent"
description = """
Type-safe Fluent localization derives and runtime traits for Rust applications
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"
categories = [ "localization", "internationalization" ]
keywords = [ "fluent", "i18n", "locale" ]

[package.metadata.cargo-machete]
# Enables `icu_provider/sync` for thread-safe ICU4X formatter caches.
ignored = [ "icu_provider" ]

[features]
chrono = [
  "dep:chrono",
  "icu-datetime",
  "icu_datetime/unstable_chrono_0_4",
]
debug-embed = [ "es-fluent-manager-core/debug-embed" ]
default = [ "derive" ]
derive = [ "dep:es-fluent-derive" ]
icu-datetime = [
  "dep:icu_calendar",
  "dep:icu_datetime",
  "dep:icu_experimental",
  "dep:icu_locale",
  "dep:icu_provider",
  "dep:icu_time",
  "dep:intl-memoizer",
  "dep:writeable",
]
jiff = [
  "dep:jiff",
  "icu-datetime",
  "icu_datetime/unstable_jiff_0_2",
]

[dependencies]
chrono = { optional = true, workspace = true }
es-fluent-derive = { optional = true, workspace = true }
es-fluent-manager-core = { workspace = true }
es-fluent-shared = { workspace = true }
fluent-bundle = { workspace = true }
icu_calendar = { optional = true, workspace = true }
icu_datetime = { optional = true, workspace = true }
icu_experimental = { optional = true, workspace = true }
icu_locale = { optional = true, workspace = true }
icu_provider = { optional = true, workspace = true }
icu_time = { optional = true, workspace = true }
intl-memoizer = { optional = true, workspace = true }
inventory = { workspace = true }
jiff = { optional = true, workspace = true }
unic-langid = { features = [ "macros" ], workspace = true }
writeable = { optional = true, workspace = true }

[dev-dependencies]
es-fluent-build = { workspace = true }
es-fluent-generate = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
