[package]
name = "bevy-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false
autobins = false

[lib]
crate-type = [ "cdylib", "rlib" ]

[[example]]
name = "bevy-example"
path = "src/main.rs"

[features]
default = [ "native" ]
native = [ "bevy/wayland", "bevy/file_watcher", "es-fluent-manager-bevy/file_watcher" ]

[dependencies]
bevy = { workspace = true }
es-fluent = { workspace = true }
es-fluent-manager-bevy = { workspace = true }
example-shared-lib = { features = [ "bevy" ], path = "../example-shared-lib" }

[build-dependencies]
es-fluent-build = { workspace = true }

[lints]
workspace = true
