[package]
name = "cfg_attr-example"
version = "0.1.0"
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-macros = { workspace = true }
log = { workspace = true }
rust-embed = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
unic-langid = { workspace = true }
fluent = { workspace = true }
fluent-bundle = { workspace = true }
inventory = { workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }
log = { workspace = true }

[lints]
workspace = true

[features]
default = [ "i18n" ]
i18n = [  ]
