[package]
name = "cfg_attr-example"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-singleton = { workspace = true }
strum = { features = [ "derive" ], workspace = true }

[build-dependencies]
es-fluent-build = { workspace = true }
log = { workspace = true }

[lints]
workspace = true

[features]
default = [ "i18n" ]
i18n = [  ]
