[package]
name = "cosmic-example"
version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[build-dependencies]
es-fluent-build = { workspace = true }
log = { workspace = true }
vergen = { features = [ "git", "gitcl" ], version = "8" }

[dependencies]
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
example-shared-lib = { features = [ "iced" ], path = "../example-shared-lib" }
futures-util = "0.3.31"
open = "5.3.0"
rust-embed = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
tokio = { features = [ "full" ], version = "1.41.0" }
unic-langid = { workspace = true }

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
rev = "df9df40"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
  # Accessibility support
  "a11y",
  # Uses cosmic-settings-daemon to watch for config file changes
  "dbus-config",
  # Support creating additional application windows.
  "multi-window",
  # On app startup, focuses an existing instance if the app is already open
  "single-instance",
  # Uses tokio as the executor for the runtime
  "tokio",
  # Windowing support for X11, Windows, Mac, & Redox
  "winit",
  # Add Wayland support to winit
  "wayland",
  # GPU-accelerated rendering
  "wgpu",
]

[lints]
workspace = true
